--- a/PerfectChannelShoppingCart/PerfectChannelShoppingCart.csproj
+++ b/PerfectChannelShoppingCart/PerfectChannelShoppingCart.csproj
@@ -123,6 +123,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\CartController.cs" />
     <Compile Include="Controllers\ItemController.cs" />
+    <Compile Include="Controllers\OrderController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
